--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -1,15 +1,9 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f0f2f5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
 .outer-container {
+  position: absolute;
+  top: 50%;
+  padding: 20px;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -92,19 +86,19 @@ button:last-of-type:hover {
   background-color: #36a420;
 } */
 .signup-btn {
-    background-color: #42b72a;
-    color: white;
-    font-size: 16px;
-    padding: 10px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-weight: bold;
-  }
-  
-  .signup-btn:hover {
-    background-color: #36a420;
-  }
+  background-color: #42b72a;
+  color: white;
+  font-size: 16px;
+  padding: 10px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.signup-btn:hover {
+  background-color: #36a420;
+}
 
 span {
   color: #1877f2;
